plugins {
    id 'java'
    id 'application'
    id 'jacoco'
    id 'eclipse'
    id 'maven-publish'
    alias(libs.plugins.sonarqube)
    alias(libs.plugins.jlink)
    alias(libs.plugins.graalvm)
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withJavadocJar()
    withSourcesJar()
}

version = providers.gradleProperty('releaseVersion')
        .orElse(providers.environmentVariable('RELEASE_VERSION'))
        .getOrElse('2.0.0')
group = "com.github.optyfr"

base {
    archivesName = 'Jtrrntzip'
}

def manifestAttributes = [
    "Manifest-Version"     : "1.0",
    "Specification-Title"  : "Jtrrntzip",
    "Specification-Version": version.substring(0, version.lastIndexOf('.')),
    "Implementation-Title" : "JTrrntzip",
    "Implementation-Version" : version.substring(version.lastIndexOf('.') + 1),
    "Main-Class"           : "jtrrntzip.Program",
]

repositories {
    mavenCentral()
}

application {
    mainClass = 'jtrrntzip.Program'
}

dependencies {
    implementation libs.commons.io
    testImplementation platform(libs.junit.bom)
    testImplementation libs.junit.jupiter
    testRuntimeOnly libs.junit.platform.launcher
}

jar {
    manifest {
        attributes(manifestAttributes)
    }
    archiveFileName = base.archivesName.get() + '.jar'
}

tasks.named('sourcesJar', Jar) {
    duplicatesStrategy = 'include'
}

apply from: "$rootDir/gradle/quality.gradle"
apply from: "$rootDir/gradle/publishing.gradle"
apply from: "$rootDir/gradle/native.gradle"
apply from: "$rootDir/gradle/eclipse.gradle"
apply from: "$rootDir/gradle/distribution.gradle"
